# stateful_backend

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
client/: CMakeLists.txt  mixed_io_stream_infer_client.py  model_config_util.h  simple_grpc_sequence_stateful_stream_infer_client.cc
docker/: Dockerfile.backend
models/accumulate/: config.pbtxt
models/accumulate/1/: accumulate.onnx
models/accumulate_fp32/: config.pbtxt
models/accumulate_int32/: config.pbtxt
models/accumulate_int32/1/: accumulate_int32.onnx
models/mixed_io_bool_int8/: config.pbtxt
models/mixed_io_bool_int8/1/: mixed_io_bool_int8.onnx
models/mixed_io_int32_fp16/: config.pbtxt
models/mixed_io_int32_fp16/1/: mixed_io_int32_fp16.onnx
scripts/: build_backend.py  prebuild_setup.sh  stateful_config.py  stateful_utils.py  test.py
src/: buffers_internal.h  cuda_kernels.cu  libtriton_onnx_stateful.ldscript  onnx_model_runner.cc  onnx_model_runner.h  onnx_stateful.cc  onnx_stateful.h  request_util.cc  request_util.h  response_util.cc  response_util.h  stateful.cc  stateful.h  states_management.h
